--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,12 @@
     --dream: hsl(30, 38%, 92%)
 }
 
+@import url("https://fonts.google.com/specimen/Montserrat");
+
 *{
     margin: 0;
     padding: 0;
+    font-family:"Montserrat", sans-serif;;
 }
 
 body{
@@ -18,7 +21,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: blue;
+    background-color: white;
 }
  
 .card{
@@ -27,8 +30,9 @@ body{
     gap: 5%;
     width: 70%;
     background-color: whitesmoke;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+    border-radius: 25px;
+    box-shadow: 10px 10px 60px rgba(0, 0, 0, 0.5);
+
 }
 
 .card-img-holder{
@@ -44,34 +48,91 @@ body{
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
     object-fit: fill;
+    box-shadow: 10px 0px 30px rgba(0, 0, 0, 0.3);
 
 } 
 
 .card-desc{
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-right: 5%;
+    gap: 7%;
     justify-content: center;
 }
 
 .card-desc h3{
     color: hsl(228, 12%, 48%);
     margin: 0;
+    padding-top: 0;
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
 .card-desc h1{
     margin: 0;
     text-align: center;
 }
 
-
-
 .price{
     display: flex;
     gap: 35px;
     justify-content: center;
+    color: hsl(123, 61%, 26%);
+}
+.price h5{
+    color: hsl(228, 12%, 48%);;
 }
 
 .price h5{
     text-decoration: line-through;
+}
+
+.cart{
+    background-color:hsl(123, 61%, 26%) ;
+    text-align: center;
+    padding: 15px 5px;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 20px;
+}
+.cart a {
+    text-decoration: none;
+    color: white;
+    border : 1 px hsl(123, 61%, 26%) solid;
+}
+.cart:hover{
+    border : 1 px hsl(123, 61%, 26%) solid; 
+    background-color: lightgrey;
+
+}
+
+@media only screen and (max-width: 600px) {
+    .card{
+        flex-direction: column;
+    }
+    .card-img-holder
+    {
+        min-height: 100%;
+    }
+    .card-img-holder img{
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .card-desc{
+        min-height: 450px;
+        width: 100%;
+        justify-content: space-between;
+        padding: 5% 0;
+    }
+
+    .card-desc p{
+        margin: 15px 15px;
+    }
+
+    .card-desc h3{
+        margin: 0 15px;
+        font-size: .9rem;
+    }
 }
